fixed white space between main and header

--- a/styles/main.css
+++ b/styles/main.css
@@ -58,6 +58,11 @@ nav a:hover {
   color: #a87c7c;
 }
 
+.intro-container h1 {
+  margin-top: 0;
+  padding-top: 16px;
+}
+
 h1 {
   font-weight: bold;
 }
